Fixed Algolia hits UI

--- a/index.html
+++ b/index.html
@@ -116,14 +116,19 @@
                     <div
                         class="
                             mt-12
-                            grid
                             gap-16
                             pt-12
-                            lg:grid-cols-3
                             lg:gap-x-5 lg:gap-y-12
                         "
                         id="results"
                     >
+                    <div>
+                        <a href="https://csrg-group.github.io/dcs-notes.github.io/CS118/" class="block font-fira-code underline text-center">
+                            <p class="text-xl font-semibold">
+                                    CS118: Programming for Computer Scientists
+                            </p>
+                        </a>
+                    </div>
                     </div>
                 </div>
             </div>
